# polyflexmd

./: .gitignore  README.md  Singularity.def  pyproject.toml
data_analysis/: pyproject.toml
data_analysis/notebooks/: 1-pre-research-FENE-beadspring.ipynb  2-FENE-beadsring.ipynb  2-test.ipynb
data_analysis/src/data_analysis/data/: read.py  types.py
data_analysis/src/data_analysis/transform/: constants.py  transform.py
data_analysis/src/data_analysis/visualize/: plot_system.py
defence/: report.tex
experiments/: 1-FENE-beadspring-large.toml  1-FENE-beadspring.toml  1-test-FENE-beadspring-local.toml  1-test-FENE-beadspring-taurus.toml  10-l_K-EEA1-expanded.toml  12-EEA1_short-long_time.toml  13-EEA1_short+Rab5_10x-long_time.toml  14-EEA1_short.toml  15-EEA1_short+Rab5_10x.toml  16-EEA1_short+Rab5_20x.toml  17-EEA1_short-free_chain.toml  18-EEA1_short+Rab5_10x-free_chain.toml  19-EEA1_short-lp_bonded_like-free_chain.toml  2-FENE-beadspring-small.toml  20-full_flex-free_chain.toml  21-EEA1_short+Rab5_20x-free_chain.toml  22-EEA1_short+Rab5_10x-lp_bonded_like-free_chain.toml  3-FENE-beadspring-free-angle.toml  4-FENE-beadspring-vary-l_K-continue.toml  4-FENE-beadspring-vary-l_K-equilibrate.toml  4-FENE-beadspring-vary-l_K.toml  5-FENE-beadspring-vary-l_K-vary-d_end-equilibrate.toml  5-FENE-beadspring-vary-l_K-vary-d_end-flexible-equilibrate.toml  5-FENE-beadspring-vary-l_K-vary-d_end-flexible.toml  5-FENE-vary-l_K-vary-d_end-flexible-equilibrate.toml  6-FENE-beadspring-vary-l_K-vary-d_end-rod-equilibrate.toml  6-FENE-beadspring-vary-l_K-vary-d_end-rod.toml  6-FENE-vary-l_K-vary-d_end-flexible.toml  7-FENE-vary-l_K-vary-d_end-rod-equilibrate.toml  8-FENE-vary-l_K-vary-d_end-rod.toml  9-l_K-EEA1-collapsed.toml  test-FENE-beadspring-free-angle.toml  test-FENE-beadspring-taurus.toml
jobs/: gen_fm_msd.py  gen_msdfm_avg_t_start.sh.py
notebooks/: 1-FENE-beadsring-ete.ipynb  2-FENE-vs-rouse.ipynb  2-harmonic-vs-fene.ipynb  3-FENE-vary-l_K.ipynb  4-FENE-vary-l_K-vary-d_end-flexible.ipynb  4-FENE-vary-l_K-vary-d_end-process.ipynb  4-FENE-vary-l_K-varyd_end.ipynb  5-vary-l_K-vary-d_end-analyze.ipynb  6-EEA1-vs-EEA1+Rab5-analyze.ipynb  7-Rab5-0x-10x-20x.ipynb  8-free-chain-msd-lm.ipynb  9-free-chain-msd-fm.ipynb  alpha_bar.ipynb  harmonic-vs-fene.ipynb  kappa-vs-l_K.ipynb  l-K-est-test.ipynb  l_K-est-debug.ipynb  m_tau_m_range.ipynb  montest.ipynb  msd.ipynb  nb.ipynb  rouse.ipynb  test-mda.ipynb  uniform-sequence-sphere.ipynb  viz-test-initial-syst.ipynb
reports/: 1-FENE-beadsring-small-ete-25b0750c.html  12+13-exp-nb-6-EEA1-vs-EEA1+Rab5-analyze.html  14+15-exp-nb-6-EEA1-vs-EEA1+Rab5-analyze.html  16+14+15-exp-nb-7-Rab5-0x-10x-20x.html  17+18-exp-nb-6-EEA1-vs-EEA1+Rab5-analyze.html  3-exp-nb-1-FENE-beadsring-ete-6bd315aa.html  3-exp-nb-1-FENE-beadsring-ete-8b2b60a0.html  3-exp-nb-2-FENE-vs-rouse-6bd315aa.html  3-exp-nb-2-FENE-vs-rouse-8b2b60a0-64.html  3-exp-nb-2-FENE-vs-rouse-a62b82b9.html  4-exp-nb-3-FENE-vary-l_K-e296c212-in_equilibrium.html  4-exp-nb-3-FENE-vary-l_K-e296c212.html  5-exp-nb-4-FENE-vary-l_K-vary-d_end-flexible-equilibrate-e5eb10a0.html  (+5 more)
tools/experiment_runner/: pyproject.toml
tools/experiment_runner/experiment_runner/: __main__.py  cli.py  config.py  run.py
tools/experiment_runner/experiment_runner/templates/: job.jinja2  job_serial.jinja2
tools/system_creator/: pyproject.toml  system_creator.def
tools/system_creator/src/system_creator/: __main__.py  anchored_fene_chain.py  cli.py
tools/system_creator/system_creator/: __init__.py  anchored_fene_chain.py  cli.py
(+104 files in other folders)
