[tool.poetry]
name = "polyflexmd"
version = "0.1.0"
description = ""
authors = ["Yahor Paromau <yahor.paromau@gmail.com>"]
readme = "README.md"
packages = [{include = "polyflexmd", from="./src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = "^0.9.0"
numpy = "^1.24.2"
spock-config = "^3.0.2"
pydantic = "^1.10.7"
tomlkit = "^0.11.7"
gitpython = "^3.1.31"
jinja2 = "^3.1.2"
notebook = "^6.5.3"
pandas = {extras = ["hdf5", "performance"], version = "^2.0.3"}
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pymatgen = "2023.3.23"
scipy = "^1.10.1"
pandarallel = "^1.6.4"
nbconvert = "^7.3.1"
papermill = "^2.4.0"
sympy = "^1.11.1"
pandoc = "^2.3"
mpi4py = "^3.1.4"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-nbextensions-configurator = "^0.6.3"
dask = {extras = ["distributed"], version = "^2023.7.0"}
bokeh = "^3.2.0"
dask-jobqueue = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
