[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["Yahor Paromau <yahor.paromau@gmail.com>"]
readme = "README.md"
packages = [{include = "data_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.5,<3.12"
notebook = "^6.5.3"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pymatgen = "^2023.3.23"
scipy = "^1.10.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
