[tool.poetry]
name = "system-creator"
version = "0.1.0"
description = ""
authors = ["Yahor Paromau <yahor.paromau@gmail.com>"]
readme = "README.md"
packages = [{include = "system_creator", from="./src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
